--- a/admin-portal/package.json
+++ b/admin-portal/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
